plugins {
    id 'org.springframework.boot' version '2.7.15'
    id 'io.spring.dependency-management' version '1.1.3'
    id 'java'
}

sourceCompatibility = '11'
group = 'camp.nextstep.edu'

allprojects {
    version '0.0.1'
    repositories {
        mavenCentral()
    }
}

test {
    useJUnitPlatform()
}


subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    tasks.named('test') {
        useJUnitPlatform()
    }
}
